--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,3 +32,45 @@ jobs:
       run: |
        cd aula-ci
        mvn clean install -DskipTests
+
+    - name: Upload build artifcat
+      uses: actions/upload-artifact@v4
+      with:
+        name: jar file
+        path: aula-ci/target/*.jar
+
+  test:
+
+    needs: build
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up JDK 23
+      uses: actions/setup-java@v4
+      with:
+        java-version: '23'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build with Maven
+      run: |
+       cd aula-ci
+       mvn clean test site
+
+    - name: Upload build artifcat
+      uses: actions/upload-artifact@v4
+      with:
+        name: test report
+        path: aula-ci/target/site/
+
+  notification: 
+
+    needs: test
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Notification
+      run: sh scripts/sendEmail.sh
